css/theme-nature.css
/* ... */
.modal-strip i.close-modal {
font-size: 18px;
}
.modal-strip .icon + p {
padding-left: 32px;
position: relative;
top: 3px;
}
.modal-strip p + .btn {
margin-left: 24px;
}
@media all and (max-width: 1024px) {
.modal-strip {
  margin: 0;
  width: 100%;
  bottom: 0;
}
}
@media all and (max-width: 767px) {
.modal-strip .close-modal {
  position: relative;
  top: 0;
  right: 0;
  left: 15px;
  transform: none !important;
  -webkit-transform: none !important;
  margin-top: 16px;
}
.modal-strip .icon {
  display: none;
}
.modal-strip .icon + p {
  padding-left: 0;
  top: 0;
}
}
/*!---------- 36. FOOTERS ----------*/
footer.bg-dark a {
color: #fff;
}
.footer-1 .logo {
max-height: 30px;
}
.footer-1 .sub {
opacity: .5;
}
.social-list {
margin: 0;
}
.image-bg .social-list a {
color: #fff;
}
.bg-dark .social-list a,
.image-bg .social-list a {
color: #fff;
opacity: .5;
}
.bg-dark .social-list a:hover {
opacity: 1;
}
.image-bg .social-list a {
opacity: 1;
}
.bg-light .social-list a {
color: #222;
}
.back-to-top {
position: absolute;
left: 50%;
bottom: 0;
transform: translateX(-50%);
-webkit-transform: translateX(-50%);
}
.back-to-top:hover {
opacity: 1;
}
.bg-dark .back-to-top {
border-color: #fff;
}
.bg-dark .back-to-top:active,
.bg-dark .back-to-top:focus {
color: #fff;
}
.bg-dark .back-to-top:hover {
background: none;
}
/*!---------- 36. SPACING ----------*/
.mr0 {
margin-right: 0;
}
.mb0 {
margin-bottom: 0 !important;
}
.mb8 {
margin-bottom: 8px;
}
.mb16 {
margin-bottom: 16px;
}
.mb24 {
margin-bottom: 24px;
}
.mb30 {
margin-bottom: 30px;
}
.mb32 {
margin-bottom: 32px;
}
.mb40 {
margin-bottom: 40px;
}
.mb48 {
margin-bottom: 48px;
}
.mb56 {
margin-bottom: 56px;
}
.mb64 {
margin-bottom: 64px;
}
.mb72 {
margin-bottom: 72px;
}
.mb80 {
margin-bottom: 80px;
}
.mb88 {
margin-bottom: 88px;
}
.mb96 {
margin-bottom: 96px;
}
.mb104 {
margin-bottom: 104px;
}
.mb112 {
margin-bottom: 112px;
}
.mb120 {
margin-bottom: 120px;
}
.mb160 {
margin-bottom: 160px;
}
.mt0 {
margin-top: 0 !important;
}
.mt8 {
margin-top: 8px;
}
.mt16 {
margin-top: 16px;
}
.mt24 {
margin-top: 24px;
}
.mt32 {
margin-top: 32px;
}
.mt40 {
margin-top: 40px;
}
.mt48 {
margin-top: 48px;
}
.mt56 {
margin-top: 56px;
}
.mt64 {
margin-top: 64px;
}
.mt72 {
margin-top: 72px;
}
.mt80 {
margin-top: 80px;
}
.mt88 {
margin-top: 88px;
}
.mt96 {
margin-top: 96px;
}
.mt104 {
margin-top: 104px;
}
.mt112 {
margin-top: 112px;
}
.mt120 {
margin-top: 120px;
}
.mt160 {
margin-top: 160px;
}
.p32 {
padding: 0 32px;
}
.p24 {
padding: 24px;
}
.p0 {
padding: 0;
}
.pt0 {
padding-top: 0;
}
.pt8 {
padding-top: 8px;
}
.pt16 {
padding-top: 16px;
}
.pt24 {
padding-top: 24px;
}
.pt32 {
padding-top: 32px;
}
.pt40 {
padding-top: 40px;
}
.pt48 {
padding-top: 48px;
}
.pt64 {
padding-top: 64px;
}
.pt72 {
padding-top: 72px;
}
.pt80 {
padding-top: 80px;
}
.pt88 {
padding-top: 88px;
}
.pt96 {
padding-top: 96px;
}
.pt104 {
padding-top: 104px;
}
.pt112 {
padding-top: 112px;
}
.pt120 {
padding-top: 120px;
}
.pt160 {
padding-top: 160px;
}
.pt180 {
padding-top: 180px;
}
.pt240 {
padding-top: 240px;
}
.pb0 {
padding-bottom: 0;
}
.pb8 {
padding-bottom: 8px;
}
.pb16 {
padding-bottom: 16px;
}
.pb24 {
padding-bottom: 24px;
}
.pb32 {
padding-bottom: 32px;
}
.pb40 {
padding-bottom: 40px;
}
.pb48 {
padding-bottom: 48px;
}
.pb56 {
padding-bottom: 56px;
}
.pb64 {
padding-bottom: 64px;
}
.pb72 {
padding-bottom: 72px;
}
.pb80 {
padding-bottom: 80px;
}
.pb88 {
padding-bottom: 88px;
}
.pb96 {
padding-bottom: 96px;
}
.pb104 {
padding-bottom: 104px;
}
.pb112 {
padding-bottom: 112px;
}
.pb120 {
padding-bottom: 120px;
}
.pb160 {
padding-bottom: 160px;
}
.pb180 {
padding-bottom: 180px;
}
.pb240 {
padding-bottom: 240px;
}
@media all and (max-width: 990px) {
.mb-s-0 {
  margin-bottom: 0;
}
.mb-s-8 {
  margin-bottom: 8px;
}
.mb-s-16 {
  margin-bottom: 16px;
}
.mb-s-24 {
  margin-bottom: 24px;
}
.mb-s-32 {
  margin-bottom: 32px;
}
.mb-s-40 {
  margin-bottom: 40px;
}
.mb-s-48 {
  margin-bottom: 48px;
}
.mb-s-64 {
  margin-bottom: 64px;
}
.mb-s-72 {
  margin-bottom: 72px;
}
.mb-s-80 {
  margin-bottom: 80px;
}
.mb-s-88 {
  margin-bottom: 88px;
}
.mb-s-96 {
  margin-bottom: 96px;
}
.mb-s-104 {
  margin-bottom: 104px;
}
.mb-s-112 {
  margin-bottom: 112px;
}
.mb-s-120 {
  margin-bottom: 120px;
}
}
/* ... */

